# curly-eureka

./: CMakeLists.txt  README.md  mixed_precision.cpp  pybind_module.cpp
examples/: benchmark_ad.cu  benchmark_suite.cu  example_vec_hessian_packed.cu  example_vec_hessian_plan.cu  example_vec_hessian_tiled.cu
include/: hyperdual.cuh  jacobian_kernels.cuh  runner.cuh
include/cudual/: advanced_kernels.cuh  cudual.cuh  kernels.cuh  packed_kernels_vec.cuh  plans_vec.cuh  tiled_kernels_vec.cuh
src/: kernel.cu  main.cu  pybind_module.cpp
tests/: test_atan2_fd.cu  test_erfcx_fd.cu  test_lbeta_fd.cu  test_lgamma_fd.cu  test_logbeta_fd.cu  test_minimal_grad_hess.cu  test_sinc_fd.cu  test_softmax_jacobian.cu
